<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LUG Manipal</string>
    <string name="swipe_to_refresh">Swipe To Refresh</string>
    <string name="loading">Loading</string>
    <string name="title_activity_admin">Admin</string>
    <string name="action_admin">Admin</string>
    <string name="action_about">About</string>
    <string name="send_push">PUSH</string>
    <string name="title">Enter Title</string>
    <string name="detail">Enter Details</string>
    <string name="image">Enter Image URL</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="url_github">https://github.com/chipset95/LUGMNotifier</string>
    <string name="about">Get notifications and details about all the workshops and events being conducted by Linux Users Group (LUG), Manipal. No registration required.\n\nDeveloped and maintained by CHIPSET.\n\nSource code for the app can be found at:</string>
    <string name="rnr">RATE &amp; REVIEW</string>
    <string name="sug">SUGGESTIONS</string>
    <string name="password">Password</string>
    <string name="ep">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="date">Enter Date and Time</string>
    <string name="addToCalender">Add to Calender</string>
    <string name="github_organisation">GitHub Organisation</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="facebook_group">Facebook Group</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>
    <string name="core_committee">Core Committee</string>
    <string name="mailing_list">Mailing List</string>
    <string name="no_internet_con">No Internet Connection</string>
    <string name="ERROR_REQ">Required</string>
</resources>
