
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/pushNotificationTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/pushNotificationDetailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pushNotificationTitleEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/detail" />

    <EditText
        android:id="@+id/pushNotificationImageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pushNotificationDateEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/image" />

    <EditText
        android:id="@+id/pushNotificationDateEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_below="@+id/pushNotificationDetailEditText"/>

    <Button
        android:id="@+id/sendPushButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pushNotificationImageEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/black"
        android:text="@string/send_push"
        android:textColor="@color/clouds" />
</RelativeLayout>
