<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:textSize="15sp"
        android:id="@+id/github_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url_github"
        android:textColor="@color/peterRiver" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/rnr_button"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:text="@string/rnr" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/sug_button"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:text="@string/sug" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>